<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.view.fragment.PaymentFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@id/lnParent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@id/image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_slider"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.appcompat.widget.Toolbar
            android:id="@id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_52"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <LinearLayout
            android:id="@id/lnDots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="end"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="@dimen/margin_60"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/margin_16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lnDots"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_white_shape_32"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <View
                    android:layout_width="@dimen/margin_1"
                    android:layout_height="@dimen/margin_8" />

                <TextView
                    android:id="@id/txtTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/iransansmobile"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_20"
                    android:textStyle="bold" />

                <View
                    android:layout_width="@dimen/margin_1"
                    android:layout_height="@dimen/margin_4" />

                <TextView
                    android:id="@id/txtCategoryTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/iransansmobile"
                    android:gravity="center_vertical"
                    android:textColor="@color/secondary_text_two"
                    android:textSize="@dimen/text_size_12" />

                <View
                    android:layout_width="@dimen/margin_1"
                    android:layout_height="@dimen/margin_16" />


                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/margin_24"
                    android:fillViewport="true">

                    <TextView
                        android:id="@+id/txtDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/iransansmobile"
                        android:gravity="center"
                        android:textColor="@color/secondary_text_two"
                        android:textSize="@dimen/text_size_12" />
                </androidx.core.widget.NestedScrollView>

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/lnUserAlreadyTakenQuiz"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_53"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <TextView
                android:id="@id/txtRetest"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/color_green"
                android:gravity="center"
                android:text="@string/retest"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_18" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <LinearLayout
                android:id="@id/lnProgressTheResultOfTheLastTest"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/accent_two"
                android:gravity="center"
                android:visibility="gone">

                <com.wang.avi.AVLoadingIndicatorView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:indicatorColor="@color/white"
                    app:indicatorName="BallPulseIndicator" />
            </LinearLayout>


            <TextView
                android:id="@id/txtTheResultOfTheLastTest"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/accent_two"
                android:gravity="center"
                android:text="@string/the_result_of_the_last_test"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_18" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnPayment"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_53"
            android:background="@color/color_green"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/the_payment"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_18" />

            <View
                android:layout_width="@dimen/margin_1"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_marginBottom="@dimen/margin_8"
                android:background="@color/white" />

            <TextView
                android:id="@id/txtAmount"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_18" />

        </LinearLayout>

        <LinearLayout
            android:id="@id/lnProgressStartTest"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_53"
            android:background="@color/accent_two"
            android:gravity="center"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <com.wang.avi.AVLoadingIndicatorView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:indicatorColor="@color/white"
                app:indicatorName="BallPulseIndicator" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnStartTest"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_53"
            android:background="@color/accent_two"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/start_test"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_18" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <com.wang.avi.AVLoadingIndicatorView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:indicatorColor="@color/color_progress"
            app:indicatorName="BallPulseIndicator" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/please_wait"
            android:textColor="@color/color_progress" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>